feat(main): add modularization