@@ -11,6 +11,12 @@
 
     <artifactId>scraphead-core</artifactId>
 
+    <properties>
+        <surefire.argline.opens>
+            --add-opens scraphead.core/fr.ght1pc9kc.scraphead.core.scrap=ALL-UNNAMED
+        </surefire.argline.opens>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
